Fix styling for homepage on Safari (#239)
* fix styling for homepage on Safari
* success story margin

--- a/src/layout/Footer.module.scss
+++ b/src/layout/Footer.module.scss
@@ -52,6 +52,7 @@ footer.container {
   .bottom {
     background: white;
     color: black;
+    margin: 0;
     min-height: 150px;
     text-align: center;
     display: flex;
